Fixed styling to match updated dark mode logic

--- a/src/app/my-account/modals.css
+++ b/src/app/my-account/modals.css
@@ -4,8 +4,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--dark-color);
-  color: var(--white-color);
+  background-color: var(--white-color);
+  color: var(--dark-color);
   border-radius: 50px;
   padding: 25px;
   min-width: 50vw;
@@ -93,7 +93,7 @@
   align-items: center;
   position:absolute;
   bottom:10%;
-  left:25%;
+  left:38%;
   outline: none;
   color: #fff;
   border: none;
