--- a/src/app/my-account/page.css
+++ b/src/app/my-account/page.css
@@ -233,8 +233,7 @@
   align-items: center;
   font-size: 30px;
   position: relative;
-  background-color: var(--dark-color);
-  color: var(--white-color);
+  color: var(--dark-color);
   border-radius: 50px;
   padding: 25px;
   width: 43vw;
@@ -352,8 +351,8 @@
   font-family: "__Inter_e66fe9", "__Inter_Fallback_e66fe9" ;
   width:100%;
   height:10vh;
-  background-color: var(--dark-color);
-  color: var(--white-color);
+  background-color: var(--white-color);
+  color: var(--dark-color);
 }
 .edit-icon-bio {
   color: var(--red-color);
